# reflowfy

./: .env.reflow-manager.example  .gitignore  CLAUDE.md  Dockerfile.api  Dockerfile.base  Dockerfile.reflow-manager  Dockerfile.worker  MANIFEST.in  README.md  REFLOW_MANAGER.md  TESTING_DISTRIBUTED.md  TESTING_ELASTICSEARCH.md  docker-compose.e2e-infra.yml  docker-compose.e2e.yml  docker-compose.elastic.yml  docker-compose.yml  pyproject.toml
.claude/: memory.db
.claude-flow/: CAPABILITIES.md  config.yaml  daemon-state.json
.claude-flow/agents/: store.json
.claude-flow/metrics/: codebase-map.json  consolidation.json  learning.json  swarm-activity.json  v3-progress.json
.claude-flow/security/: audit-status.json
.claude-flow/swarm/: swarm-state.json
.github/workflows/: release.yml
.swarm/: schema.sql  state.json
deploy/observability/: README.md  prometheus.yml
docs/: BASE_IMAGE.md  DX_IMPROVEMENT_PLAN.md  E2E_TESTING.md  FRESH_PROJECT_GUIDE.md  OPENSHIFT_DEPLOYMENT.md  REFLOW_MANAGER.md  enable_duplicate_jobs.md  logging-inventory.md  observability.md
examples/: init_elastic_test_data.py  run_api.py  run_api_distributed.py  run_elastic_pipeline_local.py  run_local_worker.py  run_simple_test.py  simple_test_pipeline.py  xml_to_json_pipeline.py
graphify-out/: .graphify_root  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
helm/reflowfy-api/: values.yaml
helm/reflowfy-worker/: Chart.yaml  values.yaml
openshift/: kafka-cluster.yaml  kafka-deployment.yaml  kafka-sasl-configmap.yaml  kafka-sasl-secret.yaml  kafka-subscription.yaml  kafka-topic.yaml  kafka-user.yaml
pipelines/: __init__.py  api_example_pipeline.py  elastic_test_pipeline.py  example_pipeline.py  my_pipeline.py  s3_example_pipeline.py  simple_test_pipeline.py
reflowfy/: __init__.py  http_auth.py  kafka_config.py
reflowfy/api/: __init__.py  app.py  execution.py  routes.py
reflowfy/cli/: main.py  utils.py
reflowfy/core/: __init__.py  abstract_pipeline.py  execution_context.py  id_based_pipeline.py  pipeline.py  pipeline_discovery.py  registry.py  serialization.py
reflowfy/destinations/: __init__.py  api.py  base.py  console.py  decorators.py  http.py  kafka.py  schemas.py
reflowfy/execution/: __init__.py  base.py  content_dedup.py  distributed_executor.py  job_runner.py  local_executor.py  (+1 more)
scripts/: build_base_image.sh  run_e2e_tests.sh  update_version.py
(+211 files in other folders)
